--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -2,6 +2,7 @@
           <% if logged_in? %>
             <%= link_to "home", root_url %>
             <%= link_to "profile", :show_profile %>
+            <%= link_to "settings", :settings %>
             <%= link_to "log out", :logout %>
           <% end %>
 </div>
