--- a/app/views/tracks/index.html.erb
+++ b/app/views/tracks/index.html.erb
@@ -1,10 +1,11 @@
 <% title "Tracks" %>
 
-  <% for track in @tracks %>
+<% for track in @tracks %>
+	<%= track.votes.count %>
     <%= link_to track.title, track %>-
-    <%= link_to track.artist, artist_path(track.artist)%><br />
-    Uploaded by: <%= track.user.username %><br /><br />
-  <% end %>
+    <%= track.artist %><br />
+    Uploaded by: <%= link_to track.user.username, track.user.username %><br /><br />
+<% end %>
 
 
 
